--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
 @import './styles/_root.scss';
-@import './styles/home.scss';
-@import './styles/components/validate.scss';
+
+@import './styles/pages/home/page.scss';
 
 
 // Paste it to webflow head and remove
